--- a/docs/3.0rc/develop/write-workflows/index.mdx
+++ b/docs/3.0rc/develop/write-workflows/index.mdx
@@ -5,7 +5,7 @@ description: Learn the basics of defining and running flows.
 
 Flows are the most central Prefect object. A flow is a container for workflow logic as code and allows users to configure 
 how their workflows behave.
-Flows are defined as Python functions, and almost any Python function is eligible to be a flow.
+Flows are defined as Python functions. Almost any Python function is eligible to be a flow.
 
 They can take inputs, perform work, and return an output.
 You can turn any function into a Prefect flow by adding the `@flow` decorator.
