--- a/docs/3.0rc/develop/write-workflows/index.mdx
+++ b/docs/3.0rc/develop/write-workflows/index.mdx
@@ -333,11 +333,13 @@ and a non-default task runner.
 
 ```python
 from prefect import flow
-from prefect.task_runners import SequentialTaskRunner
 
-@flow(name="My Flow",
-      description="My flow using SequentialTaskRunner",
-      task_runner=SequentialTaskRunner())
+@flow(
+    name="My Flow",
+    description="My flow with retries and linear backoff",
+    retries=3,
+    retry_delay_seconds=[10, 20, 30],
+)
 def my_flow():
     return
 ```
@@ -345,10 +347,13 @@ def my_flow():
 You can also provide the description as the docstring on the flow function.
 
 ```python
-@flow(name="My Flow",
-      task_runner=SequentialTaskRunner())
+@flow(
+    name="My Flow",
+    retries=3,
+    retry_delay_seconds=[10, 20, 30],
+)
 def my_flow():
-    """My flow using SequentialTaskRunner"""
+    """My flow with retries and linear backoff"""
     return
 ```
 
