Add support for generator flows (#14061)
Co-authored-by: Jeff Hale <discdiver@users.noreply.github.com>

--- a/docs/3.0rc/develop/write-workflows/index.mdx
+++ b/docs/3.0rc/develop/write-workflows/index.mdx
@@ -149,6 +149,70 @@ MyClass.my_class_method()
 MyClass.my_static_method()
 ```
 
+### Generators
+
+Prefect supports synchronous and asynchronous generators as flows. The flow is considered to be `Running` as long as the generator is yielding values. When the generator is exhausted, the flow is considered `Completed`. Any values yielded by the generator can be consumed by other flows or tasks. 
+
+```python
+from prefect import flow
+
+@flow
+def generator():
+    for i in range(10):
+        yield i
+
+@flow
+def consumer(x):
+    print(x)
+
+for val in generator():
+    consumer(val)
+```
+
+<Warning>
+**Generator functions are consumed when returned from flows**
+
+The result of a completed flow must be serializable, but generators cannot be serialized. 
+Therefore, if you return a generator from a flow, the generator will be fully consumed and its yielded values will be returned as a list. 
+This can lead to unexpected behavior or blocking if the generator is infinite or very large.
+
+Here is an example of proactive generator consumption:
+
+```python
+from prefect import flow
+
+def gen():
+    yield from [1, 2, 3]
+    print('Generator consumed!')
+
+@flow
+def f():
+    return gen()
+    
+f()  # prints 'Generator consumed!'
+```
+
+If you need to return a generator without consuming it, you can `yield` it instead of using `return`. 
+Values yielded from generator flows are not considered final results and do not face the same serialization constraints:
+
+```python
+from prefect import flow
+
+def gen():
+    yield from [1, 2, 3]
+    print('Generator consumed!')
+
+@flow
+def f():
+    yield gen
+    
+generator = next(f())
+list(generator) # prints 'Generator consumed!'
+
+```
+</Warning>
+
+
 ## Parameters
 
 As with any Python function, you can pass arguments to a flow.
