--- a/docs/3.0rc/manage/cloud/index.mdx
+++ b/docs/3.0rc/manage/cloud/index.mdx
@@ -3,7 +3,7 @@ title: What's Prefect Cloud?
 description: Observe and orchestrate your workflow applications with the Prefect Cloud platform.
 ---
 
-Prefect Cloud is a hosted workflow application platform with all the capabilities of Prefect server plus additional features, such as:
+Prefect Cloud is a hosted workflow application platform with all the capabilities of an open source Prefect server instance plus additional features, such as:
 
 - [User accounts](#user-accounts) &mdash; personal accounts for working in Prefect Cloud.
 - [Workspaces](#workspaces/) &mdash; isolated environments to organize your flows, deployments, and flow runs.
