--- a/docs/3.0rc/manage/cloud/workspaces.mdx
+++ b/docs/3.0rc/manage/cloud/workspaces.mdx
@@ -82,7 +82,7 @@ Previously invited individuals or provisioned service accounts are listed here.
 
 ![Managing sharing in a workspace in the Prefect Cloud UI.](/images/workspaces5.png)
 
-### Invite Members
+### Invite members
 
 To invite someone to an account, select the Members **+** icon. You can select from a list of existing account members.
 
