--- a/docs/3.0rc/manage/cloud/workspaces.mdx
+++ b/docs/3.0rc/manage/cloud/workspaces.mdx
@@ -91,7 +91,7 @@ A workspace Owner can change this role at any time.
 
 Select **Send** to initiate the invitation.
 
-### Invite Service Accounts
+### Invite service accounts
 
 To add a service account to a workspace, select the Service Accounts **+** icon. You can select from a list of configured service accounts. 
 Select a Workspace Role for the service account. 
