--- a/docs/3.0rc/manage/cloud/workspaces.mdx
+++ b/docs/3.0rc/manage/cloud/workspaces.mdx
@@ -10,7 +10,7 @@ For example, you can use separate workspaces to isolate dev, staging, and prod e
 Workspaces are available with [Prefect Cloud](/3.0rc/manage/cloud/connect-to-cloud) only.
 </Note>
 
-## Get started with Workspaces
+## Get started with workspaces
 
 When you first log into Prefect Cloud, you are prompted to create your own initial workspace. 
 After you create your workspace, you can view flow runs, flows, deployments, and other workspace-specific features in the Prefect Cloud UI.
