--- a/docs/3.0rc/manage/cloud/workspaces.mdx
+++ b/docs/3.0rc/manage/cloud/workspaces.mdx
@@ -69,7 +69,7 @@ On this page you can edit workspace details or delete the workspace.
 <Warning>
 **Deleting a workspace**
 
-Deleting a workspace deletes all deployments, flow run history, work pools, and notifications configured in workspace.
+Deleting a workspace deletes all of its data including deployments, flow run history, work pools, and automations.
 </Warning>
 
 ## Workspace access 
