--- a/docs/3.0rc/manage/cloud/workspaces.mdx
+++ b/docs/3.0rc/manage/cloud/workspaces.mdx
@@ -99,7 +99,7 @@ This is the initial role for the service account within the workspace. A workspa
 
 Select **Share** to finalize adding the service account.
 
-### Remove a Member or Service Account
+### Remove a member or service account
 
 To remove a workspace member or service account, select **Remove** from the menu on the right side of the user or service account information on this page.
 
