--- a/docs/3.0rc/manage/cloud/workspaces.mdx
+++ b/docs/3.0rc/manage/cloud/workspaces.mdx
@@ -112,7 +112,7 @@ Workspace transfer retains existing workspace configuration and flow run history
 <Note>
 **Workspace transfer permissions**
 
-You must have admin privileges to initiate or approve a Workspace transfer.
+You must have admin privileges to initiate or approve a workspace transfer.
 
 To initiate a workspace transfer between personal accounts, contact [support@prefect.io](mailto:support@prefect.io).
 </Note>
