--- a/docs/3.0rc/manage/cloud/workspaces.mdx
+++ b/docs/3.0rc/manage/cloud/workspaces.mdx
@@ -12,7 +12,7 @@ Workspaces are available with [Prefect Cloud](/3.0rc/manage/cloud/connect-to-clo
 
 ## Get started with workspaces
 
-When you first log into Prefect Cloud, you are prompted to create your own initial workspace. 
+When you first log into Prefect Cloud, you are prompted to create your own workspace. 
 After you create your workspace, you can view flow runs, flows, deployments, and other workspace-specific features in the Prefect Cloud UI.
 
 ![Viewing a workspace dashboard in the Prefect Cloud UI.](/images/workspaces1.png)
