--- a/docs/3.0rc/manage/cloud/index.mdx
+++ b/docs/3.0rc/manage/cloud/index.mdx
@@ -42,9 +42,9 @@ Custom plans have [object-level access control lists](/3.0rc/cloud/manage-users/
 ## Workspaces
 
 A workspace is an isolated environment within Prefect Cloud for all Prefect activity, including:
-- [Flow runs](/3.0rc/develop/write-workflows/) and task runs executed in an environment that is [syncing with the workspace](/3.0rc/cloud/workspaces/)
-- [Flows](/3.0rc/develop/write-workflows/) associated with flow runs and deployments observed by the Prefect Cloud API
-- [Deployments](/3.0rc/deploy/serve-workflows/)
+- [Flow runs](/3.0rc/develop/write-flows/) and task runs executed in an environment that is [syncing with the workspace](/3.0rc/cloud/workspaces/)
+- [Flows](/3.0rc/develop/write-flows/) associated with flow runs and deployments observed by the Prefect Cloud API
+- [Deployments](/3.0rc/deploy/serve-flows/)
 - [Work pools](/3.0rc/deploy/dynamic-infra/control-runs/)
 - [Blocks](/3.0rc/develop/connect-third-party/)
 - [Events](/3.0rc/react/understand-events/)
