--- a/docs/contribute/index.mdx
+++ b/docs/contribute/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Contribute
 sidebarTitle: Overview
-description: Join the Prefect community.
+description: Join the community, improve Prefect, and share integrations
 ---
 
 There are many ways to get involved with the Prefect community:
