--- a/docs/3.0rc/manage/cloud/workspaces.mdx
+++ b/docs/3.0rc/manage/cloud/workspaces.mdx
@@ -9,7 +9,6 @@ For example, you can use separate workspaces to isolate dev, staging, and prod e
 ## Get started with workspaces
 
 When you first log into Prefect Cloud, you are prompted to create your own workspace. 
-After you create your workspace, you can view flow runs, flows, deployments, and other workspace-specific features in the Prefect Cloud UI.
 
 ![Viewing a workspace dashboard in the Prefect Cloud UI.](/images/workspaces1.png)
 
@@ -22,26 +21,11 @@ Your list of available workspaces may include:
 *   Your own account's workspace.
 *   Workspaces in an account you're invited to with Admin or Member access.
 
-<Info>
-**Workspace-specific features**
-
-
-Each workspace keeps track of its own:
-
-    - [Flow runs](https://docs.prefect.io/ui/flow-runs/) and task runs executed in an environment that is [syncing with the workspace](https://docs.prefect.io/ui/cloud/#workspaces)
-    - [Flows](https://docs.prefect.io/concepts/flows/) associated with flow runs or deployments observed by the Prefect Cloud API
-    - [Deployments](https://docs.prefect.io/concepts/deployments/)
-    - [Work pools](https://docs.prefect.io/concepts/work-pools/)
-    - [Blocks](https://docs.prefect.io/ui/blocks/) and [Storage](https://docs.prefect.io/concepts/storage/)
-    - [Automations](https://docs.prefect.io/concepts/automations/)
-
-</Info>
-
 Your user permissions within workspaces may vary. Account admins can assign roles and permissions at the workspace level.
 
 ## Create a workspace
 
-On the Account Workspaces dropdown, or the **Workspaces** page, select the **+** icon to create a new workspace.
+On the Account settings dropdown, select the "Create a new workspace" button to create a new workspace.
 
 Configure:
 
@@ -54,25 +38,16 @@ Configure:
 Select **Create** to create the new workspace. The number of available workspaces varies by [Prefect Cloud plan](https://www.prefect.io/pricing/). 
 See [Pricing](https://www.prefect.io/pricing/) if you need additional workspaces or users.
 
-## Workspace settings
-
-
-![Managing a workspace in the Prefect Cloud UI.](/images/workspaces4.png)
-
-On this page you can edit workspace details or delete the workspace.
-
-<Warning>
-**Deleting a workspace**
+## Deleting a workspace
 
 Deleting a workspace deletes all of its data including deployments, flow run history, work pools, and automations.
-</Warning>
 
 ## Workspace access 
 
-Within a Prefect Cloud Pro or Custom tier account, Workspace Owners can invite other people as members, and provision [service accounts](https://docs.prefect.io/ui/service-accounts/) to a workspace. 
-A Workspace Owner assigns a [workspace role](https://docs.prefect.io/ui/roles/) to the user, and specifies the scope of permissions for the user within the workspace.
+Within a Prefect Cloud Pro or Custom tier account, workspace owners can invite other people as members, and provision [service accounts](https://docs.prefect.io/ui/service-accounts/) to a workspace. 
+A workspace owner assigns a [workspace role](https://docs.prefect.io/ui/roles/) to the user, and specifies the scope of permissions for the user within the workspace.
 
-As a Workspace Owner, select **Workspaces -> Sharing** to manage members and service accounts for the workspace.
+As a workspace owner, select **Workspaces -> Sharing** to manage members and service accounts for the workspace.
 Previously invited individuals or provisioned service accounts are listed here.
 
 ![Managing sharing in a workspace in the Prefect Cloud UI.](/images/workspaces5.png)
@@ -81,16 +56,16 @@ Previously invited individuals or provisioned service accounts are listed here.
 
 To invite someone to an account, select the Members **+** icon. You can select from a list of existing account members.
 
-Select a Role for the user. This is the initial role for the user within the workspace.
+Select a role for the user. This is the initial role for the user within the workspace.
 A workspace Owner can change this role at any time.
 
 Select **Send** to initiate the invitation.
 
 ### Invite service accounts
 
-To add a service account to a workspace, select the Service Accounts **+** icon. You can select from a list of configured service accounts. 
+To add a service account to a workspace, select the service accounts **+** icon. You can select from a list of configured service accounts. 
 Select a Workspace Role for the service account. 
-This is the initial role for the service account within the workspace. A workspace Owner can change this role at any time. 
+This is the initial role for the service account within the workspace. A workspace owner can change this role at any time. 
 
 Select **Share** to finalize adding the service account.
 
@@ -98,11 +73,11 @@ Select **Share** to finalize adding the service account.
 
 To remove a workspace member or service account, select **Remove** from the menu on the right side of the user or service account information on this page.
 
-## Workspace transfer
+## Transfer a workspace
 
 Workspace transfer enables you to move an existing workspace from one account to another.
 
-Workspace transfer retains existing workspace configuration and flow run history, including blocks, deployments, notifications, work pools, and logs.
+Workspace transfer retains existing workspace configuration and flow run history, including blocks, deployments, automations, work pools, and logs.
 
 <Note>
 **Workspace transfer permissions**
@@ -111,8 +86,6 @@ You must have admin privileges to initiate or approve a workspace transfer.
 
 To initiate a workspace transfer between personal accounts, contact [support@prefect.io](mailto:support@prefect.io).
 </Note>
-
-### Transfer a workspace
 
 From the three dot menu in the upper right of the page, select **Transfer**.
 
