--- a/docs/3.0rc/manage/cloud/workspaces.mdx
+++ b/docs/3.0rc/manage/cloud/workspaces.mdx
@@ -3,7 +3,7 @@ title: Workspaces
 description: Organize and compartmentalize your workflows with Workspaces.
 ---
 
-A workspace is a discrete environment within Prefect Cloud for your workflows and blocks. 
+A workspace is a discrete environment within Prefect Cloud for your workflows and related information. 
 For example, you can use separate workspaces to isolate dev, staging, and prod environments, or to provide separation between different teams.
 
 ## Get started with workspaces
