rework sqlalchemy home page

--- a/docs/integrations/prefect-shell/index.mdx
+++ b/docs/integrations/prefect-shell/index.mdx
@@ -128,4 +128,4 @@ ping_op = ShellOperation.load("block-name")
 
 ## Resources
 
-Refer to the prefect-shell API documentation linked in the sidebar to explore all the capabilities of the prefect-shell library.
+Refer to the prefect-shell SDK documentation linked in the sidebar to explore all the capabilities of the prefect-shell library.
