--- a/docs/integrations/prefect-shell/index.mdx
+++ b/docs/integrations/prefect-shell/index.mdx
@@ -8,14 +8,17 @@ Execute shell commands from within Prefect flows.
 
 ### Prerequisites
 
-- [Prefect installed](/3.0rc/get-started/install/).
+Requires an installation of Python 3.9+
+
+We recommend using a Python virtual environment manager such as pipenv, conda or virtualenv.
+
+These tasks are designed to work with Prefect 3. 
 
 ### Install `prefect-shell`
 
 ```bash
 pip install -U prefect-shell
 ```
-
 
 ### Register newly installed block types
 
