--- a/docs/integrations/prefect-snowflake/index.mdx
+++ b/docs/integrations/prefect-snowflake/index.mdx
@@ -228,7 +228,7 @@ SnowflakeConnector.load("CONNECTOR-BLOCK-NAME-PLACEHOLDER")
 <Info>
 **Registering blocks**
 
-Register blocks in this module to [view and edit them](https://docs.prefect.io/ui/blocks/) on Prefect Cloud:
+Register blocks in this module to [view and edit them](https://docs.prefect.io//blocks/) on Prefect Cloud:
 
 ```bash
 prefect block register -m prefect_snowflake
@@ -243,6 +243,4 @@ If you encounter any bugs while using `prefect-snowflake`, feel free to open an 
 
 If you have any questions or issues while using `prefect-snowflake`, you can find help in the [Prefect Slack community](https://prefect.io/slack).
 
-### Contributing
 
-If you'd like to help contribute to fix an issue or add a feature to `prefect-snowflake`, please [propose changes through a pull request from a fork of the Prefect repository](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/creating-a-pull-request-from-a-fork).
