--- a/docs/integrations/prefect-dbt/index.mdx
+++ b/docs/integrations/prefect-dbt/index.mdx
@@ -39,7 +39,7 @@ Register the block types in the prefect-dbt module to make them available for us
 
 ```bash
 prefect block register -m prefect_dbt
-
+```
 
 Explore the examples below to use Prefect with dbt.
 
@@ -287,5 +287,5 @@ According to dbt's [Databricks setup page](https://docs.getdbt.com/reference/war
 pip install dbt-databricks
 ```
 
-Check out the [desired profile setup page](https://docs.getdbt.com/reference/profiles.yml) on the sidebar for others.
+Check out the [desired profile setup page](https://docs.getdbt.com/reference/profiles.yml) for other configuration.
 </Warning> 
