--- a/docs/3.0rc/get-started/quickstart.mdx
+++ b/docs/3.0rc/get-started/quickstart.mdx
@@ -10,12 +10,13 @@ In this quickstart, you'll schedule your code on remote infrastructure and obser
 
 ## Example
 
-This basic script fetches statistics about the [main Prefect GitHub repository](https://github.com/PrefectHQ/prefect).
+In this quickstart, you will convert the following script to a schedulable, observable, resilient, and deployable workflow.
 
 ```python
 import httpx
 
 def get_repo_info():
+    """Fetch statistics about https://github.com/PrefectHQ/prefect"""
     url = "https://api.github.com/repos/PrefectHQ/prefect"
     response = httpx.get(url)
     repo = response.json()
@@ -26,21 +27,21 @@ if __name__ == "__main__":
     get_repo_info()
 ```
 
-The following steps convert this script to a schedulable, observable, resilient, and deployable workflow.
-
 ## Install Prefect
+
+Install the Prefect client.
+If needed, see [Install Prefect](/3.0rc/get-started/install/) for other options.
 
 ```bash
 pip install -U prefect==3.0.0rc2"
 ```
 
-See the [install guide](/3.0rc/get-started/install/) for more detailed installation instructions, if needed.
-
 ## Connect to Prefect's API
 
-Much of Prefect's functionality is backed by a hosted API.
-The fastest and simplest solution is a Prefect-hosted API:
+Connect to the Prefect API with Cloud or OSS:
 
+<Tabs>
+  <Tab title="Cloud">
 1. Head to [https://app.prefect.cloud/](https://app.prefect.cloud/) and sign in or create a forever-free Prefect Cloud account.
 1. Use the `prefect cloud login` CLI command to log in to Prefect Cloud from your development environment.
 
@@ -52,16 +53,24 @@ Choose **Log in with a web browser** and click the **Authorize** button in the b
 Your CLI is now authenticated with your Prefect Cloud account through a locally-stored API key that expires in 30 days.
 
 If you have any issues with browser-based authentication, see the [Prefect Cloud docs](/3.0rc/cloud/manage-users/api-keys/) to learn how to authenticate with a manually created API key.
+  </Tab>
+  <Tab title="OSS">
+TBD
 
 <Note>
 If you would like to run a Prefect server instance on your own infrastructure, see the [Host a Prefect server instance](/3.0rc/cloud/self-host/) docs.
 Note that you need to both host your own server and run flows on your own infrastructure.
 </Note>
+  </Tab>
+</Tabs>
 
 ## Convert your function to a Prefect flow
 
 The easiest way convert a Python function into a workflow is to add a `@flow` decorator.
 [Flows](/3.0rc/develop/write-flows/) are the core observable, deployable units in Prefect and are the primary entrypoint to orchestrated work.
+
+The following flow calls two tasks, each defined by the `@task` decorator.
+Tasks are the smallest unit of observed and orchestrated work in Prefect.
 
 ```python my_gh_workflow.py
 import httpx   # an HTTP client library and dependency of Prefect
@@ -105,12 +114,13 @@ if __name__ == "__main__":
     repo_info()
 ```
 
+<Note>
 The `log_prints=True` argument provided to the `@flow` decorator logs output from `print` statements within the function.
+</Note>
 
-The flow calls two tasks, defined by the `@task` decorator.
-Tasks are the smallest unit of observed and orchestrated work in Prefect.
+## Run your flow
 
-Run the script:
+Run your flow using Python.
 
 ```bash
 python my_gh_workflow.py
@@ -132,24 +142,32 @@ Prefect automatically tracks the state of the flow run and logs the output in th
 14:28:33.255 | INFO    | Flow run 'energetic-panther' - Finished in state Completed('All states completed.')
 ```
 
-## Deploy on a remote infrastructure
+## Create a work pool
 
 Running a flow locally is a good start, but a remote destination is used for production.
-Tell Prefect where to run the workflow by creating a [work pool](/3.0rc/deploy/dynamic-infra/control-runs/).
+Create a work pool with Cloud or OSS.
 
-Prefect Cloud can run the flow code using a [Prefect Managed work pool](/3.0rc/deploy/serve-flows/index).
-You can create a work pool in the UI or from the CLI.
+<Tabs>
+  <Tab title="Cloud">
+You can create a [managed work pool](/3.0rc/deploy/serve-flows/index) in the UI or from the CLI.
 
 ```bash
 prefect work-pool create my-managed-pool --type prefect:managed
 ```
 
-You'll see the work pool created by the CLI.
-You can also view your new work pool on the **Work Pools** page of the UI.
+You can view your new work pool on the **Work Pools** page of the UI.
+  </Tab>
+  <Tab title="OSS">
+You can create a worker-based work pool using the CLI.
+In this example, we'll create a Docker type work pool, but you can choose from other [work pool types](https://docs.prefect.io/concepts/work-pools/#worker-types).
 
-## Make your code schedulable
+```bash
+TBD
+```
+  </Tab>
+</Tabs>
 
-The final step is to deploy your flow so it can run remotely on a schedule. 
+## Deploy and schedule your flow
 
 A [deployment](/3.0rc/deploy/serve-flows/) schedules a flow function to run in your work pool.
 Deployments elevate flows to remotely configurable entities that have their own API.
@@ -158,20 +176,20 @@ This next script builds a deployment, identifying:
 
 - Source for the code to deploy (here, a GitHub repo)
 - Specific flow to run (`my_gh_workflow.py:repo_info`)
-- Work pool target (`my-managed-pool`)
+- Work pool target (for example, `my-managed-pool`)
 - Cron schedule (1am every day)
 
-<Info>
-This example uses Prefect's own GitHub repo.
-To test with your own code, push your script to your GitHub account and update the `source` argument accordingly.
-</Info>
-
+<Tabs>
+  <Tab title="Cloud">
 ```bash create_deployment.py
 from prefect import flow
 
+# The repository to query
+SOURCE_REPO="https://github.com/prefecthq/demos.git"
+
 if __name__ == "__main__":
     flow.from_source(
-        source="https://github.com/prefecthq/demos.git",
+        source=SOURCE_REPO,
         entrypoint="my_gh_workflow.py:repo_info",
     ).deploy(
         name="my-first-deployment",
@@ -179,18 +197,33 @@ if __name__ == "__main__":
         cron="0 1 * * *",
     )
 ```
+  </Tab>
+  <Tab title="OSS">
+```bash
+TBD
+```
+  </Tab>
+</Tabs>
 
 <Tip>
 You can store your flow code in nearly any location as long as Prefect can access it.
-This example uses a GitHub repository, but you could bake your code into a Docker image or store it in cloud provider storage.
-Read [Where to store your flow code](/3.0rc/deploy/dynamic-infra/retrieve-flow-code) for details.
+See [Where to store your flow code](/3.0rc/deploy/dynamic-infra/retrieve-flow-code) for more details.
 </Tip>
 
-Run the script to create the deployment on the Prefect Cloud server.
+Run the script to create the deployment.
 
+<Tabs>
+  <Tab title="Cloud">
 ```bash
 python create_deployment.py
 ```
+  </Tab>
+  <Tab title="OSS">
+```bash
+TBD
+```
+  </Tab>
+</Tabs>
 
 You see a message that your deployment was created:
 
@@ -205,14 +238,11 @@ ______________________________________________________
 ______________________________________________________
 ```
 
-The previous command creates the deployment in Prefect, without starting it.
-To schedule a run for the deployment, use:
+To schedule a run for the deployment:
 
-```bash
-prefect deployment run 'repo-info/my-first-deployment'
-```
-
-You can also run your flow via the Prefect UI on the **Deployments** page.
+<Tabs>
+  <Tab title="Cloud">
+You can run your flow with the Prefect UI on the **Deployments** page.
 
 The deployment is configured to run on a Prefect Managed work pool, so Prefect automatically spins up the infrastructure to run the flow. 
 
@@ -223,6 +253,13 @@ After a minute or so, you should see the flow run graph and logs on the Flow Run
 <Warning>
     After testing this process, click the **Remove** button in the top right of the **Deployment** page so that the workflow is no longer scheduled to run once per day.
 </Warning>
+  </Tab>
+  <Tab title="OSS">
+```bash
+prefect deployment run 'repo-info/my-first-deployment'
+```
+  </Tab>
+</Tabs>
 
 ## Next steps
 
@@ -233,10 +270,6 @@ Now considering reading:
 * [Write tasks](/3.0rc/develop/write-tasks/index)
 * [Self-host](/3.0rc/cloud/self-host) your Prefect server
 
-
 <Tip>
-**Need help?**
-
-Get your questions answered by a Prefect Product Advocate!
-[Book a meeting](https://calendly.com/prefect-experts/prefect-product-advocates?utm_campaign=prefect_docs_cloud&utm_content=prefect_docs&utm_medium=docs&utm_source=docs)
+[Book a meeting](https://calendly.com/prefect-experts/prefect-product-advocates?utm_campaign=prefect_docs_cloud&utm_content=prefect_docs&utm_medium=docs&utm_source=docs) with a Prefect Product Advocate to get your questions answered.
 </Tip>
