--- a/docs/integrations/prefect-bitbucket/index.mdx
+++ b/docs/integrations/prefect-bitbucket/index.mdx
@@ -41,7 +41,7 @@ To create a deployment and run a deployment where the flow code is stored in a p
 A deployment can use flow code stored in a Bitbucket repository without using this library in either of the following cases:
 
 - The repository is public
-- The deployment uses a [Secret block](https://docs.prefect.io/latest/develop/connect-third-party/) to store the token
+- The deployment uses a [Secret block](/3.0rc/resources/secrets) to store the token
 
 Create a Bitbucket Credentials block:
 
